--- a/css/missaoambiental.css
+++ b/css/missaoambiental.css
@@ -11,9 +11,8 @@ font-family: 'Staatliches', cursive;*/
     font-family: 'Bree Serif', serif;
 }
 
-body {
-    min-height: 100vh; 
-    background: url("/image/fundoprincipal.jpg") no-repeat;  
+body{
+    min-height: 100vh;  
     overflow-x: hidden;
     background-color: #fff; 
     background-size: cover;
@@ -32,8 +31,8 @@ body {
     background-image: url('/image/fundoprincipal.jpg');
     background-size: cover;
     background-position: center;
-    z-index: -1; /* Coloca a imagem atrás do conteúdo */
-  }
+    z-index: -1;
+  } 
 
 .blog-card {
     position: absolute;
@@ -271,7 +270,7 @@ input[type="checkbox"] {
     font-family: 'Bree Serif', serif;
     text-align: center;
     font-size: 24px;
-    color: #fff;
+    color: #161616;
     margin: 0;
     position: absolute;
     top: 55%;
@@ -302,7 +301,7 @@ input[type="checkbox"] {
     padding: 10px;
 }
 
-h2 {
+ h2 {
     color: rgb(154, 255, 154);
     font-family:'Bree Serif', serif;
     text-align: center;
@@ -313,10 +312,10 @@ h2 {
     left: 50%;
     margin-right: -50%;
     transform: translate(-50%, -50%);
-}
+} 
 
 #tcompostagem {
-    color: rgb(154, 255, 154);
+    color: rgb(0, 0, 0);
     font-family:'Bree Serif', serif;
     text-align: center;
     font-size: 56px;
