--- a/css/missaoambiental.css
+++ b/css/missaoambiental.css
@@ -2,7 +2,11 @@
 font-family: 'Bebas Neue', sans-serif;
 font-family: 'Bree Serif', serif;
 font-family: 'Playfair Display', serif;
-font-family: 'Staatliches', cursive;*/
+font-family: 'Staatliches', cursive;
+Brightly Orange Number 2: #f43a09
+Grandpa Orange: #ffb766
+Grey Blue Green: #c2edda
+Live Green: #68d388*/
 
 * {
     margin: 0;
@@ -266,24 +270,6 @@ input[type="checkbox"] {
     transform: translate(-50%, -50%);
 }
 
-#compostagem {
-    font-family: 'Bree Serif', serif;
-    text-align: center;
-    font-size: 24px;
-    color: #161616;
-    margin: 0;
-    position: absolute;
-    top: 55%;
-    left: 50%;
-    margin-right: -50%;
-    transform: translate(-50%, -50%);
-    text-align: center;
-    margin: auto;
-    width: 1010px; 
-    padding: 10px;
-
-}
-
 #sobre {
     font-family: 'Bree Serif', serif;
     text-align: center;
@@ -297,32 +283,71 @@ input[type="checkbox"] {
     transform: translate(-50%, -50%);
     text-align: center;
     margin: auto;
-    width: 1010px; 
-    padding: 10px;
+    width: 1200px; 
+    letter-spacing: 0.5px;
+    line-height: 1.5em;
 }
 
- h2 {
-    color: rgb(154, 255, 154);
+#quemsomos {
+    color: #fff;
     font-family:'Bree Serif', serif;
     text-align: center;
     font-size: 56px;
     margin: 0;
     position: absolute;
-    top: 30%;
+    top: 27%;
     left: 50%;
     margin-right: -50%;
     transform: translate(-50%, -50%);
 } 
 
-#tcompostagem {
-    color: rgb(0, 0, 0);
-    font-family:'Bree Serif', serif;
-    text-align: center;
+#sobreback {
+    background-image: url(/image/fundoprincipalescuro.jpg);
+}
+
+#compostagemback {
+    background-image: url(/image/fundoprincipalescuro.jpg);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-height: 180vh;
+    
+}
+
+#imgcomp {
+    max-width: 480px;
+    float: left;
+    border: 3px solid #fff;
+    border-radius: 10px;
+    margin-right: 30px;
+}
+
+.wrapper {
+    margin: 150px;
+    width: 80%;
+}
+
+.text-box {
+    color: #fff;
+
+}
+
+.text-box h2 {
     font-size: 56px;
-    margin: 0;
-    position: absolute;
-    top: 25%;
-    left: 50%;
-    margin-right: -50%;
-    transform: translate(-50%, -50%);
+    color: #fff
+}
+
+.text-box p {
+    font-size: 22px;
+    margin-bottom: 15px;
+    letter-spacing: 0.5px;
+    line-height: 1.5em;
+    text-align: justify;
+}
+
+#imgexcel {
+    max-width: 860px;
+    border-radius: 30px;
+    border: 2px solid #fff;
+    margin-left: 150px;
 }
