--- a/css/missaoambiental.css
+++ b/css/missaoambiental.css
@@ -4,6 +4,10 @@ font-family: 'Bree Serif', serif;
 font-family: 'Playfair Display', serif;
 font-family: 'Staatliches', cursive;*/
 
+.logo {
+    margin-left: 10px;
+    margin-top: 10px;
+}
 * {
     margin: 0;
     padding: 0;
@@ -206,7 +210,7 @@ input[type="checkbox"] {
     width: 100%;
     padding: 10px 100px;
     background: black;
-    background-color:rgba(0, 0, 0, 0.35);
+    background-color: #407B3B;
     display: flex;
     justify-content: space-between;
     align-items: center;
