--- a/css/missaoambiental.css
+++ b/css/missaoambiental.css
@@ -5,9 +5,18 @@ font-family: 'Playfair Display', serif;
 font-family: 'Staatliches', cursive;*/
 
 .logo {
+    display: flex;
+    align-items: center;
     margin-left: 10px;
-    margin-top: 10px;
+    margin-top: 20px;
+    margin-bottom: 10px;
 }
+
+.logo img {
+    margin-right: 10px;
+    margin-bottom: 10px;
+}
+
 * {
     margin: 0;
     padding: 0;
@@ -208,7 +217,8 @@ input[type="checkbox"] {
     top: 0;
     left: 0;
     width: 100%;
-    padding: 10px 100px;
+    height: 80px;
+    padding: 10px 120px;
     background: black;
     background-color: #407B3B;
     display: flex;
@@ -230,6 +240,26 @@ input[type="checkbox"] {
     border-radius: 50%;
     overflow: hidden;
     margin-top: -6px;
+}
+
+.botao {
+    background-color: #0D5407;
+    color: white;
+    padding: 2px 70px;
+    border: none;
+    cursor: pointer;
+    border-radius: 10px;
+}
+
+.botao:hover {
+    background-color: #45a049;
+}
+
+.hamburguer_linha {
+    width: 45px;
+    height: 5px;
+    background-color: white;
+    margin: 5px 0;
 }
 
 .navbar a {
