--- a/css/missaoambiental.css
+++ b/css/missaoambiental.css
@@ -4,22 +4,12 @@ font-family: 'Bree Serif', serif;
 font-family: 'Playfair Display', serif;
 font-family: 'Staatliches', cursive;*/
 
-@font-face {
+/* @font-face {
     font-family: ;
-    src: url('');
-}
-.logo {
-    display: flex;
-    align-items: center;
-    margin-left: 10px;
-    margin-top: 20px;
-    margin-bottom: 10px;
-}
+    src: url('Felix Titling MT.ttf') format('truetype'), url();
+} */
 
-.logo img {
-    margin-right: 10px;
-    margin-bottom: 10px;
-}
+@import url('https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Bebas+Neue&family=Bree+Serif&family=Playfair+Display:wght@400;500;600&family=Staatliches&display=swap');
 
 * {
     margin: 0;
@@ -31,13 +21,20 @@ font-family: 'Staatliches', cursive;*/
 body {
     min-height: 100vh;  
     overflow-x: hidden;
-    background-color: #2B4C07; 
+    background-color: #000000; 
     background-size: cover;
     background-position: center; 
     display: flex;
-    height: 100vh; 
-
+    height: 100vh;
 }  
+
+div.bloco {
+    background-image: url('imagens/img1_desktop_home.png');
+    height: 300px;
+    border: 1px;
+    margin-top: 80px;
+    border-radius: 20px;
+}
 
 .background-image {
     position: absolute;
@@ -61,8 +58,9 @@ body {
     left: 21%;
     border-radius: 25px;
     background: white;
-    /* box-shadow: 0 10px 50px rgba(255, 255, 255, 0.76); */
-}
+    box-shadow: 0 10px 50px rgba(255, 255, 255, 0.76);
+    }
+
 .inner-part {
     position: absolute;
     display: flex;
@@ -214,127 +212,6 @@ input[type="checkbox"] {
 #tap-8:checked ~ .sliders .tap-8:before {
     transform: scaleX(1);
     width: 100%;
-}
-
-.header {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 80px;
-    padding: 10px 60px;
-    background: black;
-    background-color: #407B3B;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    z-index: 100;
-}
-
-.logo {
-    font-size: 32px;
-    color: #fff;
-    text-decoration: none;
-    font-weight: 700;
-}
-
-.logo-image {
-    width: 46px;
-    height: 46px;
-    border-radius: 50%;
-    overflow: hidden;
-    margin-top: -6px;
-}
-
-.botao {
-    background-color: #0D5407;
-    color: white;
-    padding: 2px 70px;
-    border: none;
-    cursor: pointer;
-    border-radius: 10px;
-    height: 32px;
-}
-
-.botao:hover {
-    background-color: #98B362;
-}
-
-#icone {
-    background-color: #0D5407;
-    display: block;
-    color: white;
-    text-align: center;
-    padding: 10px 40px;
-    margin-left: 10px;
-    cursor: pointer;
-}
-
-#icone:hover {
-    background-color: #98B362;
-}
-
-menu {
-    display: none;
-}
-
-menu > ul {
-    list-style-type: none;
-
-}
-menu > ul > li > a {
-    display: block;
-    
-    text-decoration: none;
-    text-align: center;
-    background-color: #0D5407;
-    color: white;
-    margin-top: 10px;
-    border-radius: 10px;
-    padding: 2px 70px;
-    border: none;
-    height: 32px;
-}
-
-menu > ul > li > a:hover {
-    background-color: #98B362;
-}
-
-.navbar a, menu > ul > li > a {
-    position: relative;
-    font-size: 18px;
-    color: #fff;
-    font-weight: 500;
-    text-decoration: none;
-    margin-left: 40px;
-}
-
-.navbar a::before, menu > ul > li > a::before {
-    content: '';
-    position: absolute;
-    top: 100%;
-    left: 6px;
-    width: 0;
-    height: 2px;
-    background: #fff;
-    transition: 0.3s;
-}
-
-.navbar a:hover::before, menu > ul > li > a:hover::before {
-    width: 94%;
-}
-
-/* article > img {
-
-    margin-top: 80px;
-    width: "10";
-    height: "50";
-} */
-
-div.bloco {
-    background-image: url('imagens/img1_desktop_home.png');
-    height: 300px;
-    margin-top: 80px;
 }
 
 #titulo {
