--- a/css/article.css
+++ b/css/article.css
@@ -36,7 +36,7 @@ body.menu-opened {
     transform: translate(-50%, -50%);
     color: white;
     text-align: center;
-    margin-top: 110px;
+    margin-top: 80px;
 }
 
 .color-stripe {
@@ -47,11 +47,31 @@ body.menu-opened {
 }
 
 .folha_img {
-    width: 400px;
+    width: 255px;
     position: absolute;
-    top: 85%;
-    left: 74%;
-    transform: rotate(280deg);
+    top: 78%;
+    left: 83%;
+    z-index: -1;
+}
+
+.sec_1 {
+    text-align: center;
+    font-size: 32px !important;
+    font-weight: bold;
+    margin-top: 40px;
+    padding: 21px;
+}
+
+.sec_2 {
+    text-align: center;
+    font-size: 24px !important;
+    font-weight: bold;
+    padding: 12px;
+}
+
+.bloc_grey {
+    background-color: #D9D9D9;
+    font-family: 'Verdana', 'VerdanaB', sans-serif !important;
 }
 @media screen and (min-width: 820px) {
     /* .subtitulo_font{
