--- a/css/header_sissi.css
+++ b/css/header_sissi.css
@@ -50,12 +50,12 @@
 
 .subtitulo_font {
     font-family: 'Bree Serif', serif;
-    font-size: 20px;
+    font-size: 22px;
     font-weight: normal;
     color: black;
 }
 
-.texto_comum {
+.text_com {
     font-family: 'Verdana', 'VerdanaB', sans-serif;
     font-size: 14px;
     color: black;
@@ -98,6 +98,8 @@
     cursor: pointer;
     border-radius: 10px;
     height: 35px;
+    font-weight: bold;
+    box-shadow: 1px 1px;
 }
 
 .botao:hover {
@@ -136,6 +138,8 @@
 .pesquisa {
     color: #356033 !important;
     cursor: pointer;
+    border: 2px solid white !important;
+    box-shadow: 3px 3px;
 }
 
 .pesquisa:hover {
