--- a/css/article.css
+++ b/css/article.css
@@ -109,20 +109,48 @@ body.menu-opened {
     transform: translate(-50%, -50%);
     z-index: -1;
 }
-/* 
-.img_sec3 {
-    
-} */
-
-.btn_sec3 {
-    text-decoration: none;
-
-}
 
 .sec_3 {
-    width: 100%;
-    height: 40%;
+    max-width: 100% !important;
+    max-width: 540px;
+    height: 400px;
 }
+
+.card-title {
+    margin-top: 100px;
+    font-weight: bold;
+    font-size: 32px;
+}
+
+.card-text {
+    margin-top: 40px;
+}
+
+.btn-primary {
+    background-color: #664A3F !important;
+    border-color: #664A3F !important;
+    box-shadow: 0 6px 10px rgba(0, 0, 0, 0.1);
+    border-radius: 8px !important;
+}
+
+.btn-primary:hover {
+    background-color: #3D2D23 !important; 
+
+}
+
+.btn_4 {
+    background-color: #356033 !important;
+    border-color: #356033 !important;
+    box-shadow: 0 6px 10px rgba(0, 0, 0, 0.1);
+    border-radius: 8px !important;
+    padding-left: 15px !important;
+    padding-right: 15px !important;
+}
+
+.btn_4:hover {
+    background-color: hsl(120, 30%, 20%) !important; 
+}
+
 
 @media screen and (min-width: 820px) {
     /* .subtitulo_font{
